--- a/view/cars.html
+++ b/view/cars.html
@@ -15,8 +15,7 @@
           <!-- Title -->
           <div class="col-12">
             <h2 class="display-6 text-muted">
-              Tekintse meg autóink széles választékát:
-            </h2>
+Geci            </h2>
           </div>
 
           <!-- Cars -->
